// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayToast should render a "danger" style toast 1`] = `
<div class="alert alert-danger fade alert-dismissible show" role="alert">
  <button class="btn close btn-unstyled" aria-label="Close" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
      <title>times</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
    </svg>
  </button>
  <span class="alert-indicator">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-full" focusable="false">
      <title>exclamation-full</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#exclamation-full"></use>
    </svg>
  </span>
  <strong class="lead">Danger!</strong>message</div>
`;

exports[`ClayToast should render a "success" style toast 1`] = `
<div class="alert alert-success fade alert-dismissible show" role="alert">
  <button class="btn close btn-unstyled" aria-label="Close" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
      <title>times</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
    </svg>
  </button>
  <span class="alert-indicator">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-check-circle-full" focusable="false">
      <title>check-circle-full</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#check-circle-full"></use>
    </svg>
  </span>
  <strong class="lead">Success!</strong>message</div>
`;

exports[`ClayToast should render a "warning" style toast 1`] = `
<div class="alert alert-warning fade alert-dismissible show" role="alert">
  <button class="btn close btn-unstyled" aria-label="Close" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
      <title>times</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
    </svg>
  </button>
  <span class="alert-indicator">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-warning-full" focusable="false">
      <title>warning-full</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#warning-full"></use>
    </svg>
  </span>
  <strong class="lead">Warning!</strong>message</div>
`;

exports[`ClayToast should render an "info" style toast 1`] = `
<div class="alert alert-info fade alert-dismissible show" role="alert">
  <button class="btn close btn-unstyled" aria-label="Close" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
      <title>times</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
    </svg>
  </button>
  <span class="alert-indicator">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle" focusable="false">
      <title>info-circle</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#info-circle"></use>
    </svg>
  </span>
  <strong class="lead">Info</strong>message</div>
`;

exports[`ClayToast should render an toast with classes 1`] = `
<div class="alert alert-info fade alert-dismissible my-custom-class show" role="alert">
  <button class="btn close btn-unstyled" aria-label="Close" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
      <title>times</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
    </svg>
  </button>
  <span class="alert-indicator">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle" focusable="false">
      <title>info-circle</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#info-circle"></use>
    </svg>
  </span>
  <strong class="lead">info</strong>message</div>
`;

exports[`ClayToast should render an toast with id 1`] = `
<div class="alert alert-info fade alert-dismissible show" id="myId" role="alert">
  <button class="btn close btn-unstyled" aria-label="Close" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
      <title>times</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
    </svg>
  </button>
  <span class="alert-indicator">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle" focusable="false">
      <title>info-circle</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#info-circle"></use>
    </svg>
  </span>
  <strong class="lead">info</strong>message</div>
`;

exports[`ClayToast should render default markup 1`] = `
<div class="alert alert-info fade alert-dismissible show" role="alert">
  <button class="btn close btn-unstyled" aria-label="Close" type="button">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
      <title>times</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#times"></use>
    </svg>
  </button>
  <span class="alert-indicator">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle" focusable="false">
      <title>info-circle</title>
      <use xlink:href="../node_modules/clay/lib/images/icons/icons.svg#info-circle"></use>
    </svg>
  </span>
  <strong class="lead">info</strong>message</div>
`;
